Ansible/IGW.tf
resource "aws_internet_gateway" "useast2_gateway" {
  vpc_id = aws_vpc.Ansible-vpc.id

  tags = {
    Name = "useast2-igw"
  }
}
